--- a/public/index.html
+++ b/public/index.html
@@ -109,87 +109,48 @@
     barcodePreview.textContent = parts.join("");
   }
 
-  async function getFinalBarcodesFromServer(count) {
-    const prefixParts = [];
-    let modeCode = null;
+ async function getFinalBarcodesFromServer(count) {
+  const combinedParts = [];
+  let modeCode = null;
 
-    for (const wrapper of fieldsContainer.children) {
-      const selectType = wrapper.querySelector("select:first-child");
-      const valueInput = wrapper.querySelector("input, select.mode-select");
+  for (const wrapper of fieldsContainer.children) {
+    const selectType = wrapper.querySelector("select:first-child");
+    const valueInput = wrapper.querySelector("input, select.mode-select");
 
-      if (!selectType || !valueInput) continue;
+    if (!selectType || !valueInput) continue;
 
-      if (selectType.value === "shift") {
-        modeCode = valueInput.value === "모드 A" ? "A" : "B";
-        prefixParts.push(""); // 자리 확보
-      } else if (selectType.value === "serial") {
-        prefixParts.push(""); // 자리 확보
-      } else {
-        prefixParts.push(valueInput.value.trim());
-      }
-    }
-
-    const prefix = prefixParts.filter(p => p !== "").join("");
-
-    const response = await fetch("https://fksecurity.onrender.com/next-barcode", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ prefix, mode: modeCode || "A", count })
-    });
-
-    if (!response.ok) throw new Error("❌ 서버 오류");
-    const data = await response.json();
-    return data.barcodes;
-  }
-
-  async function handlePrint(type) {
-    try {
-      const count = parseInt(document.getElementById("printCount").value || "1");
-      const barcodes = await getFinalBarcodesFromServer(count);
-
-      barcodePreview.textContent = barcodes.join(", ");
-
-      if (type === "a4" || type === "label") {
-        const win = window.open('', '_blank');
-        const isA4 = type === "a4";
-        const fontSize = isA4 ? "80pt" : "12pt";
-        const barcodeSize = isA4 ? "30pt" : "32pt";
-        const layout = isA4
-          ? "padding:40px; text-align:center;"
-          : "width:50mm; height:40mm; margin:0; padding:5mm; display:flex; flex-direction:column; align-items:center; justify-content:center;";
-
-        win.document.write(`
-          <html><head><title>바코드 출력</title>
-          <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128&display=swap" rel="stylesheet">
-          </head>
-          <body style="${layout} font-size:${fontSize};">
-            ${barcodes.map(code => `
-              <div>${code}</div>
-              <div style="font-family: 'Libre Barcode 128', monospace; font-size: ${barcodeSize}; margin-bottom:30px;">*${code}*</div>
-            `).join("")}
-          </body></html>
-        `);
-        win.document.close();
-        win.focus();
-        win.print();
-      } else if (type === "bixolon") {
-        for (const code of barcodes) {
-          const payload = JSON.stringify({
-            version: "1.0",
-            commands: [
-              { cmd: "printText", text: code, x: 10, y: 10, font: "FONT_A", hFactor: 2, vFactor: 2 },
-              { cmd: "printBarcode", type: "Code128", text: code, x: 10, y: 50, height: 50 }
-            ]
-          });
-          await requestPrint("SLP-DX423", payload);
-        }
-        alert("✅ Bixolon 출력 완료");
-      }
-    } catch (err) {
-      console.error(err);
-      alert("❌ 출력 실패: 서버 또는 연결 확인");
+    if (selectType.value === "shift") {
+      // 모드 선택: A → 0, B → 5
+      modeCode = valueInput.value === "모드 A" ? "0" : "5";
+    } else if (selectType.value === "serial") {
+      // 임의번호는 prefix에 포함되지 않음
+      continue;
+    } else {
+      combinedParts.push(valueInput.value.trim());
     }
   }
+
+  // 💡 주차 필드 뒤에 모드코드 병합
+  for (let i = 0; i < combinedParts.length; i++) {
+    if (/^\d+$/.test(combinedParts[i]) && modeCode !== null) {
+      combinedParts[i] += modeCode;
+      break; // 한 번만 병합
+    }
+  }
+
+  // 최종 prefix 조합 (하이픈 포함 구조 유지)
+  const finalPrefix = combinedParts.join("");
+
+  const response = await fetch("https://fksecurity.onrender.com/next-barcode", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ prefix: finalPrefix, count })
+  });
+
+  if (!response.ok) throw new Error("❌ 서버 오류");
+  const data = await response.json();
+  return data.barcodes;
+}
 
   function requestPrint(printerName, payload, callback) {
     return fetch(`http://127.0.0.1:9200/WebPrintSDK/${printerName}`, {
