--- a/public/index.html
+++ b/public/index.html
@@ -179,22 +179,52 @@ async function handlePrint(type) {
       win.focus();
       win.print();
 
-    } else if (type === "label") {
-      const win = window.open('', '_blank');
-      const layout = "width:50mm; height:40mm; margin:0; padding:5mm; display:flex; flex-direction:column; align-items:center; justify-content:center;";
+} else if (type === "label") {
+  const win = window.open('', '_blank');
+  const layout = `
+    width:50mm; height:40mm;
+    margin:0; padding:5mm;
+    display:flex; flex-direction:column;
+    align-items:center; justify-content:center;
+    font-size:12pt;
+  `;
 
-      win.document.write(`
-        <html><head><title>라벨 출력</title>
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128&display=swap" rel="stylesheet">
-        </head>
-        <body style="${layout} font-size:12pt;">
-          <div>${barcodes[0]}</div>
-          <div style="font-family: 'Libre Barcode 128', monospace; font-size: 32pt; margin-top: 8px;">*${barcodes[0]}*</div>
-        </body></html>
-      `);
-      win.document.close();
-      win.focus();
-      win.print();
+  win.document.write(`
+    <html><head><title>라벨 출력</title>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128&display=swap" rel="stylesheet">
+    <style>
+      body { margin:0; }
+      .barcode-label {
+        page-break-after: always;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 50mm;
+        height: 40mm;
+      }
+      .barcode-font {
+        font-family: 'Libre Barcode 128', monospace;
+        font-size: 32pt;
+        white-space: nowrap;
+        overflow: hidden;
+      }
+    </style>
+    </head>
+    <body>
+      ${barcodes.map(code => `
+        <div class="barcode-label">
+          <div>${code}</div>
+          <div class="barcode-font">*${code}*</div>
+        </div>
+      `).join("")}
+    </body></html>
+  `);
+
+  win.document.close();
+  win.focus();
+  win.print();
+}
 
     } else if (type === "bixolon") {
       for (const code of barcodes) {
